Improve code quality and security
- Add config.py.example template for environment-specific configuration
- Fix security issues: improve session key handling and error handling
- Add version constraints to requirements.txt
- Refactor code structure: separate database and markov model functionality
- Add comprehensive test suite for core functionality
- Add detailed README.md with setup and usage instructions
- Improve error handling with specific exception types
- Add proper logging for debugging

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-mecab-python3
-markovify
-Flask
-unidic
-Misskey.py
-Mastodon.py
-python-Levenshtein
-sentry-sdk[flask]
-gunicorn
+mecab-python3>=1.0.6
+markovify>=0.9.4
+Flask>=2.3.0
+unidic>=1.0.0
+Misskey.py>=0.4.0
+Mastodon.py>=1.8.0
+python-Levenshtein>=0.21.0
+sentry-sdk[flask]>=1.32.0
+gunicorn>=21.0.0
+requests>=2.31.0
